--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content=" ">
 
   <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="">
+  <link rel="icon" href="/imgs/logo_agamHisab.png">
   <title>Agam Hisab - Accounting App</title>
 </head>
 
